--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/draw_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
@@ -15,10 +16,10 @@
             android:layout_height="wrap_content">
 
             <android.support.v7.widget.CardView
-                app:layout_scrollFlags="scroll|enterAlways|snap"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                app:cardBackgroundColor="@color/colorPrimaryDark">
+                app:cardBackgroundColor="@color/colorPrimaryDark"
+                app:layout_scrollFlags="scroll|enterAlways|snap">
 
                 <TextView
                     android:id="@+id/name_txt_main"
@@ -27,8 +28,7 @@
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:text="Mr.Doge"
                     android:textColor="@android:color/white"
-                    android:textSize="20sp"
-                    />
+                    android:textSize="20sp" />
 
                 <View
                     android:id="@+id/drawer_click_main"
@@ -65,27 +65,33 @@
             </android.support.v7.widget.CardView>
         </android.support.design.widget.AppBarLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_main"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/refresh_main"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_main"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
+        </android.support.v4.widget.SwipeRefreshLayout>
+
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|bottom"
             android:layout_margin="16dp"
-            android:id="@+id/fab_main"
-            app:srcCompat="@drawable/ic_add_white_24dp"
-            />
+            app:srcCompat="@drawable/ic_add_white_24dp" />
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
+        android:id="@+id/nav_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/nav_main"
         android:layout_gravity="start"
-        app:menu="@menu/nav_menu"
         app:headerLayout="@layout/nav_header"
-        />
+        app:menu="@menu/nav_menu" />
 </android.support.v4.widget.DrawerLayout>
