--- a/app/src/main/res/layout/msg_item.xml
+++ b/app/src/main/res/layout/msg_item.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/whole_view_msg_list"
     android:focusable="true"
     android:clickable="true"
+    android:paddingBottom="8dp"
     android:background="?attr/selectableItemBackground"
-    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
     <TextView
-        android:id="@+id/meeting_name"
+        android:id="@+id/msg_title"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,7 +21,7 @@
         tools:text="早上会议" />
 
     <TextView
-        android:id="@+id/start_time"
+        android:id="@+id/sent_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -28,18 +29,16 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="18:00:00-19:00:00" />
+        tools:text="19:00:00" />
 
-    <TextView
-        android:id="@+id/meet_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-
-        app:layout_constraintTop_toBottomOf="@+id/meeting_name"
-        tools:text="文理园A2 502" />
+    <ImageView
+        android:id="@+id/red_point"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginTop="2dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_red_point" />
 </android.support.constraint.ConstraintLayout>
